# graphics

./: .gitmodules  CMakeLists.txt  build_run.sh  compile.sh  run.sh  run_all.sh
include/: camera.hpp  canvas_parser.hpp  curve.hpp  element.hpp  group.hpp  hit.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ray.hpp  scene_parser.hpp  sphere.hpp  tqdm.h  transform.hpp  triangle.hpp  utils.hpp
resources/camera/: left_up.txt  right_up.txt  standard.txt
resources/lights/: softlights.txt
resources/materials/: aperture.txt  black.txt  black_plastic.txt  blue.txt  blue_plastic.txt  glass.txt  green.txt  green_plastic.txt  ivory.txt  metal.txt  mirror.txt  portal.txt  portal_blue.txt  portal_orange.txt  red.txt  red_plastic.txt  red_shiny.txt  shiny_texture.txt  texture.txt  transparent.txt  white.txt  white_metal.txt  white_plastic.txt
resources/objects/: portal_cube.lib
resources/scene/: 00_debug_scene.txt  01_obj_scene.txt  02_room_scene.txt  03_texture_scene.txt  04_curve_scene.txt  debug_scene_00.txt
resources/scripts/: softlight.txt
resources/textures/: Aperture_wall.tga  Border_baseColor.tga  Border_metallicRoughness.tga  Concrete.tga  Elevator_A.tga  Exit.tga  Heart_baseColor.tga  Iron_wall.tga  Main_baseColor.tga  Turret.tga  Warning_tape.tga  portal.lib
scripts/: build_scene.py  build_softlights.py
src/: image.cpp  main.cpp  material.cpp  mesh.cpp  scene_parser.cpp  utils.cpp
testcases/: scene.txt  scene00_debug.txt  scene01_basic.txt  scene02_cube.txt  scene03_sphere.txt  scene04_axes.txt  scene05_bunny_200.txt  scene06_bunny_1k.txt  scene07_shine.txt
